--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "use-sound": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://ladya2003.github.io/ars-gift", 
+  "homepage": "https://ladya2003.github.io/ars-2025/", 
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
